# RTDCFD

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .semgrep.yml  AGENT.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.test  LICENSE  Makefile  README.md  SECURITY.md  bandit-report.json  config.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
agents/: __init__.py  base_agent.py
agents/blue_team/: __init__.py  detection_agent.py  response_agent.py  threat_intel_agent.py
agents/red_team/: __init__.py  exploitation_agent.py  lateral_movement_agent.py  recon_agent.py  social_engineering_agent.py
dashboard/: __init__.py  streamlit_ui.py
docs/: index.md  installation.md
docs/api/: README.md  agents.md  dashboard.md  mcp.md  scenarios.md  sdk.md  websockets.md
examples/: README.md  basic_simulation.py  custom_agent.py  scenario_customization.py
mcp_servers/: __init__.py  blue_team_mcp.py  mcp_server.py  red_team_mcp.py
orchestration/: __init__.py  coordinator.py
scenarios/: __init__.py  soci_energy_grid.py  soci_telco_network.py  soci_water_system.py
scripts/: health_check.py  run_tests.sh  setup.sh
tests/: __init__.py  conftest.py  test_basic_functionality.py  test_config.py  test_scenarios.py  test_validation.py  test_validation_standalone.py  test_validation_standalone_fixed.py
utils/: __init__.py  logging_handler.py  mcp_client.py  prompt_templates.py  validation.py  validation_standalone.py
